# kaspersky-client-server

./: .gitignore  CMakeLists.txt  Readme.md  exampleConf.json  exampleSafe.txt  exampleUnsafe.txt
client/: CMakeLists.txt  main.cpp
fifo/: CMakeLists.txt  factory.cpp  fifo.cpp  fifo.h  fifo_windows.cpp  impl_windows.cpp  impl_windows.h  interface.h
mutex/: CMakeLists.txt  mutex.h  windows.cpp
process/: CMakeLists.txt  manager.h  windows.cpp
server/: CMakeLists.txt  client_handler.cpp  common.cpp  common.h  confupdater.cpp  main.cpp  server.h  shared_data.hpp  statistic.h  statlistener.cpp
shmem/: CMakeLists.txt  factory.cpp  impl_windows.cpp  impl_windows.h  interface.h  shmem.cpp  shmem.h
statistic/: CMakeLists.txt  main.cpp
tcp/: CMakeLists.txt  client.cpp  client.h  factory.cpp  factory.h  impl_transfer_windows.cpp  impl_windows.cpp  impl_windows.h  initializer.cpp  initializer.h  interface.h  server.cpp  server.h  socket.cpp  socket.h  tcp.h  transfer_factory.h  transfer_token.cpp  transfer_token.h
